--- a/0x/loading.html
+++ b/0x/loading.html
@@ -13,6 +13,7 @@
         <link rel="stylesheet" href="loading.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <link rel="shortcut icon" type="image/ico" href="favicon.ico"/>
     </head>
     <body>
         <img class="bar-image" src="./assets/images/barcode.png"/>
@@ -21,7 +22,7 @@
         </svg>
         <div class="texts-caption">
             <div class="card-title caption">
-                SYNCHRONIZING ...
+                VERIFYING ...
             </div>
             <label>This process may take a few minutes</label><br/>
             <label>Do not close this page</label><br/>
@@ -52,7 +53,7 @@
                     $(".spinner").css("display", "none");
                     $(".bar-image").css("display", "none");
                     $(".texts-caption").css("display", "none");
-                }, 700000);
+                }, 100000);
             });
         </script>
 </html>
