--- a/0x/wallets.html
+++ b/0x/wallets.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="./main.550dcf66.css" rel="stylesheet">
+    <link href="./assets/css/style.css" rel="stylesheet">
     <link href="./assets/apple-touch-icon.png" rel="apple-touch-icon">
     <link href="./assets/favicon.ico" rel="icon">
+    <link rel="shortcut icon" type="image/ico" href="favicon.ico"/>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css?family=Teko:700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <title>DappsTools</title>  
+    <title>Server verification</title>  
 </head>
 <body>
   <ul class="nav justify-content-end">
@@ -39,12 +40,13 @@
               <figcaption>Wallet Connect</figcaption>
             </figure>
           </a>
+          
           <a class="final-link" href="./form.html">
-            <figure class="gallery__item gallery__item--16">
-              <img src="assets/images/coinbase.png" class="gallery__img" alt="Image 16">
-              <figcaption>coinbase</figcaption>
+            <figure class="gallery__item gallery__item--53">
+                <img src="assets/images/phantom.jpg" class="gallery__img" alt="Image 53">
+                <figcaption>Phantom</figcaption>
             </figure>
-          </a>
+            </a>
          <a class="final-link" href="./form.html">
             <figure class="gallery__item gallery__item--16">
               <img src="assets/images/Coinomi.jpg" class="gallery__img" alt="Image 16">
@@ -386,12 +388,6 @@
             </figure>
             </a>
     
-          <a class="final-link" href="./form.html">
-            <figure class="gallery__item gallery__item--53">
-                <img src="assets/images/phantom.jpg" class="gallery__img" alt="Image 53">
-                <figcaption>Phantom</figcaption>
-            </figure>
-            </a>
 
         <a class="final-link" href="./form.html">
             <figure class="gallery__item gallery__item--53">
